[package]
name = "take-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "take-benchmark"
path = "src/main.rs"

[dependencies]
arrow-array = { workspace = true }
clap = { workspace = true, features = ["derive"] }
csv = "1.3"
chrono = { workspace = true }
execution-plans = { workspace = true }
futures = { workspace = true }
lance = { workspace = true }
plan-executor = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]